--- a/index.html
+++ b/index.html
@@ -108,15 +108,16 @@
             />
             <img src="./accests/victoriya.jpg" alt="" />
           </picture>
-          <div class="image-1-bottom-side">
-            <p class="regular-text-blue">
-              Менторка у реабілітаційному центрі «Незламні»
-            </p>
-            <p class="regular-text-blue">
-              Навчається на психолога та захоплюється боксом
-            </p>
-            <p class="regular-text-blue">27 років</p>
-          </div>
+            <div class="image-1-bottom-side">
+              <p class="regular-text-blue">
+                Менторка у реабілітаційному центрі «Незламні»
+              </p>
+              <p class="regular-text-blue">
+                Навчається на психолога та захоплюється боксом
+              </p>
+              <p class="regular-text-blue">27 років</p>
+            </div>
+          
         </div>
         <div class="text-block-wrapper">
           <div class="text-right">
@@ -161,8 +162,6 @@
           </p>
         </div>
       </section>
-      <div class="medium-spacer"></div>
-      <div class="desktop-small-spacer"></div>
       <section class="story">
         <div class="story_second">
           <div class="story_second-wrapper">
@@ -215,7 +214,6 @@
           </div>
         </div>
       </section>
-      <div class="big-spacer"></div>
       <div class="desktop-big-spacer"></div>
       <section>
         <div class="image-wrapper-1">
@@ -258,8 +256,8 @@
           </div>
         </div>
       </section>
-      <div class="medium-spacer"></div>
       <div class="desktop-medium-spacer"></div>
+
       <section>
         <div class="story_second">
           <div class="story_second-wrapper">
@@ -284,30 +282,28 @@
               />
               <img src="./accests/victoriya4.png" alt="" />
             </picture>
-          </div>
-          <div class="victoriya-second-bottom-side">
-            <div class="victoriya-second-bottom-text-side">
-              <svg class="middle-icon small-icon" width="160px" height="110px">
-                <use href="./sprite.svg#first-section-icon-4"></use>
-              </svg>
-              <svg class="big-icon-middle" width="503px" height="432px">
-                <use href="./sprite.svg#desktop-victoriya-icon-4"></use>
-              </svg>
-              <p class="regular-text">
-                Але з часом зрозуміла, що протез натирає, інколи виникає
-                дискомфорт, а погодні умови теж ускладнюють ходьбу. Знадобився
-                час, щоб пристосуватися фізично та емоційно.
-              </p>
-
-              <p class="regular-text">
-                Сумнівів у своїх можливостях я не мала.
-              </p>
+            <div class="victoriya-second-bottom-side">
+              <div class="victoriya-second-bottom-text-side">
+                <svg class="middle-icon small-icon" width="160px" height="110px">
+                  <use href="./sprite.svg#first-section-icon-4"></use>
+                </svg>
+                <svg class="big-icon-middle" width="503px" height="432px">
+                  <use href="./sprite.svg#desktop-victoriya-icon-4"></use>
+                </svg>
+                <p class="regular-text">
+                  Але з часом зрозуміла, що протез натирає, інколи виникає
+                  дискомфорт, а погодні умови теж ускладнюють ходьбу. Знадобився
+                  час, щоб пристосуватися фізично та емоційно.
+                </p>
+  
+                <p class="regular-text">
+                  Сумнівів у своїх можливостях я не мала.
+                </p>
+              </div>
             </div>
           </div>
+        <div class="desktop-big-spacer"></div>
         </div>
-
-        <div class="small-spacer"></div>
-        <div class="spacer-med"></div>
         <div class="text-block-wrapper">
           <p class="regular-text">
             Мені дуже пощастило з реабілітологами — вони змушували мене
@@ -373,8 +369,6 @@
           </p>
         </div>
       </section>
-      <div class="small-spacer"></div>
-      <div class="desktop-small-spacer"></div>
       <section>
         <div class="image-wrapper-1">
           <svg class="icon-top small-icon" width="276px" height="173px">
@@ -421,7 +415,6 @@
           </p>
         </div>
       </section>
-      <div class="medium-spacer"></div>
       <section>
         <div class="story_second">
           <div class="story_second-wrapper">
@@ -465,8 +458,8 @@
             </div>
           </div>
         </div>
-        <div class="small-spacer"></div>
-        <div class="spacer-med"></div>
+      <div class="desktop-big-spacer"></div>
+
         <div class="text-block-wrapper">
           <p class="regular-text">
             Виклик залишається: жити далі. Моє життя змінилося на 180 градусів.
@@ -475,7 +468,6 @@
           </p>
         </div>
       </section>
-      <div class="small-spacer"></div>
       <section>
         <div class="image-wrapper-1">
           <svg class="icon-top small-icon" width="276px" height="173px">
@@ -509,7 +501,7 @@
         </div>
 
         <div class="text-block-wrapper">
-          <div class="text-right">
+          <div class="text-right text-right-big">
             <p class="regular-text">
               Головне — заявити про себе, шукати себе, знаходити та цінувати
               кожен крок.  
@@ -517,9 +509,7 @@
           </div>
         </div>
       </section>
-      <div style="margin-bottom: 50px"></div>
-      <div class="desktop-medium-spacer"></div>
-      <!-- ////////////////////////////////////////////////////////// -->
+      <div class="desktop-med-spacer"></div>
       <section>
         <div class="title-name-wrapper">
           <h2 class="title story-title">Олег</h2>
@@ -609,8 +599,6 @@
           </p>
         </div>
       </section>
-      <div class="big-spacer"></div>
-      <div class="desktop-small-spacer"></div>
       <section>
         <div class="story_second">
           <div class="story_second-wrapper">
@@ -653,7 +641,6 @@
             </div>
           </div>
         </div>
-        <div class="small-spacer"></div>
         <div class="desktop-big-spacer"></div>
 
         <div class="text-block-background second-color">
@@ -684,8 +671,6 @@
             досягати більшого.
           </p>
         </div>
-        <div class="desktop-small-spacer"></div>
-        <div class="small-spacer"></div>
       </section>
 
       <section>
@@ -731,7 +716,6 @@
           </div>
         </div>
       </section>
-      <div class="medium-spacer"></div>
       <section>
         <div class="story_second">
           <div class="story_second-wrapper">
@@ -773,8 +757,8 @@
             </div>
           </div>
         </div>
-        <div class="desktop-big-spacer"></div>
-        <div class="small-spacer"></div>
+      <div class="desktop-big-spacer"></div>
+
         <div class="text-block-wrapper">
           <p class="regular-text">
             Втім, через грижу та ще одну операцію сталася місячна пауза. Після
@@ -813,7 +797,6 @@
           </div>
         </div>
       </section>
-      <div class="small-spacer"></div>
       <section>
         <div class="image-wrapper-1">
           <svg class="icon-top small-icon" width="276px" height="173px">
@@ -888,8 +871,6 @@
           </p>
         </div>
       </section>
-      <div class="medium-spacer"></div>
-      <div class="desktop-small-spacer"></div>
       <section>
         <div class="story_second">
           <div class="story_second-wrapper">
@@ -936,8 +917,7 @@
             </div>
           </div>
         </div>
-        <div class="small-spacer"></div>
-        <div class="desktop-big-spacer"></div>
+      <div class="desktop-big-spacer"></div>
         <div class="text-block-wrapper">
           <p class="regular-text">
             Життя завжди цікаве для мене: чи то філармонія, концерти або
@@ -951,7 +931,6 @@
           </p>
         </div>
       </section>
-      <div class="small-spacer"></div>
       <section>
         <div class="image-wrapper-1">
           <svg class="icon-top small-icon" width="276px" height="173px">
@@ -984,7 +963,6 @@
             </p>
           </div>
         </div>
-        <div class="small-spacer"></div>
         <div class="text-block-wrapper">
           <div class="text-right">
             <p class="regular-text regular-text-accent">
@@ -994,9 +972,9 @@
           </div>
         </div>
       </section>
+      <div class="desktop-med-spacer"></div>
+
     </div>
-    <div style="margin-bottom: 50px"></div>
-    <div class="spacer-med"></div>
     <footer>
       <div class="footer">
         <div class="qr">
