--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
         <div class="text-block-wrapper">
           <div class="text-right text-right-big">
-            <p class="regular-text">
+            <p class="regular-text medium-text-accent">
               Головне — заявити про себе, шукати себе, знаходити та цінувати
               кожен крок.  
             </p>
@@ -522,7 +522,7 @@
             підтримую військовослужбовців, які проходять відновлення»
           </p>
         </div>
-        <div class="image-wrapper-1">
+        <div class="image-wrapper-1 tranform-fixer">
           <picture class="first-type-story-icon">
             <source media="(max-width: 1199px)" srcset="./accests/mobile-icons/oleg-icon-1.png">
             <source media="(min-width: 1200px)" srcset="./accests/desktop-icons/desktop-oleg-icon-1.png">
@@ -858,7 +858,7 @@
         </div>
       </section>
       <section>
-        <div class="story_second">
+        <div class="story_second tranform-fixer">
           <div class="story_second-wrapper">
             <div class="top-right-radius-block">
               <h2 class="text-block-title blue-text uppercase">
@@ -939,7 +939,7 @@
         </div>
         <div class="text-block-wrapper">
           <div class="text-right">
-            <p class="regular-text regular-text-accent">
+            <p class="regular-text medium-text-accent">
               Принцип «Все буде добре» не працює без віри в себе. Важливо
               навчитися бути незалежним і не залежати від інших.
             </p>
